# ba_thesis

./: LICENSE  main.py  pyproject.toml
src/: calculate_metrics.ipynb  calculate_metrics.py  inference.py  setup_check.py
