[project]
name = "ba-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.9",
    "openearthmap-sar",
    "scikit-learn>=1.8.0",
]



# [tool.uv]
# workspace = ["external/oem_sar"]

[tool.uv.workspace]
members = [
    "external/oem_sar",
]

[tool.uv.sources]
openearthmap-sar = { workspace = true, editable = true }
